main-content-middle z-index fixes

--- a/src/ui-components/layout/main-content-middle.scss
+++ b/src/ui-components/layout/main-content-middle.scss
@@ -17,6 +17,8 @@
   }
   .main-content-bottom{
     height: 450px;
+    position: relative;
+    z-index: 1000;
     // height: calc(50vh - 45px - 22px - 2px); // -2 for borders
   }
   .main-content-bottom.closed {
